--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Modelo de cajas Movy Rute</title>
+	<title>Movy Rute</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 	<link rel="stylesheet"  href="css/estilos.css">
 </head>
@@ -22,12 +22,6 @@
 		 			</div>
 		 		</div>
 		 	</div>
-		 	<a href="#">
-		 		<img  src="img/registro.png" alt="">
-		 	</a>
-		 	<a href="login.php">
-		 		<img  src="img/contacto.png" alt="">
-		 	</a>
 		</div>
 		<div class="planeta"><img  src="img/planeta.png" alt=""></div>
 		<div class="logo"><img  src="img/logo.png" alt=""></div>
