Se añadio dos animaciones a la pagina y se organizo el modal del control

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Movy Rute</title>
+	<link rel="icon" href="img/logo.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 	<link rel="stylesheet"  href="css/estilos.css">
 </head>
@@ -12,7 +13,7 @@
 
 		<div class="controles">
 			<img class="vi" src="img/video.png" alt="">		
-			<a href="#con" class="imagen">
+			<a href="#con" class="imagenJuego">
 		 		<img  src="img/control.png" alt="">
 		 	</a>
 		 	<div class="modal">
@@ -151,7 +152,8 @@
 
 				<section id="sec5" class="seccion cinco">
 					<article class="container_info5">
-						<div class="videoUno"> <i class="far fa-play-circle"></i>
+						<div>
+							<video id="sampleMovie" src="videos/pista.mp4" controls class="videos"></video>
 						</div>
 					</article>
 				</section>
@@ -393,7 +395,8 @@
 
 				<section id="sec10" class="seccion diez">
 					<article class="container_info10">
-						<div class="videoUno"> <i class="far fa-play-circle"></i>
+						<div>
+							<video id="sampleMovie" src="videos/bmx.mp4" controls class="videos"></video>
 						</div>
 					</article>
 				</section>
