Se organizó la reproducción de las animaciones, y la animación del ciclista

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<div class="modal">
 				<div class="cont">
 					<div class="videoPrincipal" id="video">
+						
 						<video id="sampleMovie" src="videos/principal.mp4" controls class="videoModal"></video>
 					</div>
 				</div>
@@ -54,6 +55,7 @@
 		<nav class="menu1">
 					<ul>
 						<li class="boton1"><a href="#sec1">1839</a><div class="triangulo"></div></li>
+
 						<li class="boton2"><a href="#sec2">1868</a><div class="triangulo"></div></li>
 						<li class="boton3"><a href="#sec3">1870</a><div class="triangulo"></div></li>
 						<li class="boton4"><a href="#sec4">1879</a><div class="triangulo"></div></li>
@@ -87,11 +89,13 @@
 				</article>
 			</section>
 
-
+			
 			<section id="sec2" class="seccion dos">
+				<a href="#sec2" class="pausar"></a>
+				<a href="#sec2" class="continuar"></a>
 				<article class="container_info2">
-					<div>
-						<video id="sampleMovie" src="videos/ruta.mp4" controls class="videos"></video>
+					 <div id="animacionUno">
+						<video  src="videos/ruta.mp4" id="ruta" class="videos"></video>
 					</div>
 				</article>
 			</section>
@@ -194,9 +198,11 @@
 
 
 				<section id="sec5" class="seccion cinco">
+					<a href="#sec5" class="pausar_dos"></a>
+					<a href="#sec5" class="continuar_dos"></a>
 					<article class="container_info5">
 						<div>
-							<video id="sampleMovie" src="videos/pista.mp4" controls class="videos"></video>
+							<video id="pista" src="videos/pista.mp4" class="videos"></video>
 						</div>
 					</article>
 				</section>
@@ -363,9 +369,11 @@
 
 
 				<section id="sec8" class="seccion ocho">
+					<a href="#sec8" class="pausar_tres"></a>
+					<a href="#sec8" class="continuar_tres"></a>
 					<article class="container_info8">
 						<div>
-							<video id="sampleMovie" src="videos/montana.mp4" controls class="videos"></video>
+							<video id="montana" src="videos/montana.mp4" class="videos"></video>
 						</div>
 					</article>
 				</section>
@@ -456,9 +464,11 @@
 
 
 				<section id="sec10" class="seccion diez">
+					<a href="#sec10" class="pausar_cuatro"></a>
+					<a href="#sec10" class="continuar_cuatro"></a>
 					<article class="container_info10">
 						<div>
-							<video id="sampleMovie" src="videos/bmx.mp4" controls class="videos"></video>
+							<video id="bmx" src="videos/bmx.mp4" class="videos"></video>
 						</div>
 					</article>
 				</section>
