--- a/ra.html
+++ b/ra.html
@@ -11,7 +11,7 @@
 		<div class="boton">
 			<button class="volver"><a href="index.html">Volver</a></button>
 		</div>
-		<img class="imagenra" src="img/imagenRA1.jpg" alt="">
+		<img class="imagenra" src="img/marcador.jpg" alt="">
 		
 	</div>
 	
