Se eliminaron imagenes que no necesitabamos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		 		</div>
 		 	</div>-->
 		 	<a href="ra.html" class="imagenRA control">
-		 		<img  src="img/raa.png" alt="">
+		 		<img  src="img/ra.png" alt="">
 		 	</a>
 		</div>
 		<div class="sombra"></div>
