Se agrego el juego y el apk

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 				
-			<a href="#con" class="imagenJuego control">
+			<a href="juego/index.html" target="blank" class="imagenJuego control">
 		 		<img  src="img/control.png" alt="">
 		 	</a>
 		 	<!--<div class="modal">
