--- a/ra.html
+++ b/ra.html
@@ -10,6 +10,7 @@
 	<div class="realidadA">
 		<div class="boton">
 			<button class="volver"><a href="index.html">Volver</a></button>
+			<button class="apk"><a href="ra/ra.apk" download>Descargar APK</a></button>
 		</div>
 		<img class="imagenra" src="img/marcador.jpg" alt="">
 		
