Explicacion de la RA

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="cont">
 					<div class="videoPrincipal" id="video">
 						
-						<video id="sampleMovie" src="videos/principal.mp4" controls class="videoModal"></video>
+						<video id="principal" src="videos/principal.mp4" controls class="videoModal"></video>
 					</div>
 				</div>
 			</div>
