--- a/ra.html
+++ b/ra.html
@@ -8,10 +8,13 @@
 </head>
 <body>
 	<div class="realidadA">
+
 		<div class="boton">
 			<button class="volver"><a href="index.html">Volver</a></button>
-			<button class="apk"><a href="ra/ra.apk" download>Descargar APK</a></button>
+			<button class="apk"><a href="ra/ra.apk" download>Descargar</a></button>
 		</div>
+		<p class="parrafoRA">¿Quieres ver a Simón, David, Robert y Scott en 3D?.
+		Descarga nuestra APK, pásala a  tu móvil y escanea está imagen.</p>
 		<img class="imagenra" src="img/marcador.jpg" alt="">
 		
 	</div>
