Se organizo interfaz de la RA

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 		 	<a href="ra.html" class="imagenRA control">
 		 		<img  src="img/ra.png" alt="">
 		 	</a>
+		 	<a href="creadores.html" class="imagenRA control">
+		 		<img  src="img/contacto.png" alt="">
+		 	</a>
 		</div>
 		<div class="sombra"></div>
 		<div class="planeta">
@@ -112,7 +115,9 @@
 				</div>
 				<article class="container_info3">
 					<div class="audio"><audio src="audio/florencia.mp3" controls></audio></div>
-					<div class="imagenFlorencia"></div>
+					<div class="contenedorimg">
+						<div class="imagenFlorencia"></div>
+					</div>
 				</article>
 			</section>
 
