--- a/ra.html
+++ b/ra.html
@@ -6,18 +6,30 @@
 	<link rel="icon" href="img/logo.ico">
 	<link rel="stylesheet"  href="css/estilos.css">
 </head>
-<body>
-	<div class="realidadA">
-
-		<div class="boton">
-			<button class="volver"><a href="index.html">Volver</a></button>
-			<button class="apk"><a href="ra/ra.apk" download>Descargar</a></button>
+<body class="marcadorFondo">
+	<section>
+		<div class="contenedorRA">
+			<div>
+				<img class="imagenra" src="img/marcador.jpg" alt="">
+			</div>
+			<!--<div class="botones">
+				<button class="volver"><a href="index.html">Volver</a></button>
+				<button class="apk"><a href="ra/ra.apk" download>Descargar</a></button>
+			</div>-->
+			<div>
+				<img class="instrucciones" src="img/instrucciones.png" alt="">
+				<h2 class="instruccionesRA Titulo">¿Quires ver a Simón, David, <br> Scott y Robert en 3D?</h2>
+				<p class="instruccionesRA Parrafo"><b>1.</b> Descarga nuestra <a href="ra/ra.apk" download class="apk">APK</a><br>
+					<b>2.</b> Pásala a tu móvil <br>
+					<b>3.</b> Escanea la imagen de nuestros personajes
+				</p>
+				<button class="volver"><a href="index.html">Volver</a></button>
+			</div>
+			
 		</div>
-		<p class="parrafoRA">¿Quieres ver a Simón, David, Robert y Scott en 3D?.
-		Descarga nuestra APK, pásala a  tu móvil y escanea está imagen.</p>
-		<img class="imagenra" src="img/marcador.jpg" alt="">
-		
-	</div>
-	
+		<div>
+			<img src="img/fondoRA.png" alt="" class="ra">
+		</div>
+	</section>
 </body>
 </html>
