Se organizo interfaz de la RA, se elimino una foto

--- a/creadores.html
+++ b/creadores.html
@@ -15,7 +15,7 @@
 			</article>
 			<div class="creadores">
 				<article class="persona">
-					<img src="img/maria.png" alt="" class="foto">
+					<img src="img/.png" alt="" class="foto">
 					<h3>Ana María Acevedo Henao</h3>
 					<p>anamariaacevedohenao@gmail.com</p>
 					<p>3148116848</p>
