--- a/creadores.html
+++ b/creadores.html
@@ -10,33 +10,39 @@
 	
 		
 		<section>
+			<div class="nubes">
+					<img src="img/nube1.png" alt="" class="nube nube1">
+					<img src="img/nube2.png" alt="" class="nube nube2">
+					<img src="img/nube3.png" alt="" class="nube nube3">
+					<img src="img/nube4.png" alt="" class="nube nube4">
+				</div>
 			<article class="tituloNosotros">
 				<h1 >Nosotros</h1>
 			</article>
 			<div class="creadores">
 				<article class="persona">
-					<img src="img/.png" alt="" class="foto">
-					<h3>Ana María Acevedo Henao</h3>
-					<p>anamariaacevedohenao@gmail.com</p>
-					<p>3148116848</p>
+					<img src="img/ana.png" alt="" class="foto">
+					<h3 class="ana">Ana María Acevedo Henao</h3>
+					<p class="ana">anamaria <br> acevedohenao@gmail.com</p>
+					<p class="ana">314 811 6848</p>
 				</article>
 				<article class="persona">
-					<img src="img/.png" alt="" class="foto">
+					<img src="img/mateo.png" alt="" class="foto">
 					<h3>Luis Mateo Cano Rojas</h3>
 					<p>luismateocanor@gmail.com</p>
-					<p>3104278887</p>
+					<p>310 427 8887</p>
 				</article>
 				<article class="persona">
-					<img src="img/.png" alt="" class="foto">
+					<img src="img/maria.png" alt="" class="foto">
 					<h3>Maria Elisa Muñoz Torres</h3>
-					<p>mariaelisa11@gmail.com</p>
-					<p>3215842780</p>
+					<p>mariaelisamt11@gmail.com</p>
+					<p>321 584 2780</p>
 				</article>
 				<article class="persona">
-					<img src="img/.png" alt="" class="foto">
+					<img src="img/andreu.png" alt="" class="foto">
 					<h3>Andreu Gutierrez López</h3>
 					<p>andreugutierrezlopez123@gmail.com</p>
-					<p>3045751093</p>
+					<p>304 575 1093</p>
 				</article>
 			</div>
 		</section>
