Se puso el bototn de volver en la seccion de nosotros

--- a/creadores.html
+++ b/creadores.html
@@ -7,15 +7,15 @@
 	<link rel="stylesheet"  href="css/estilos.css">
 </head>
 <body class="fondoNosotros">
-	
+	<div class="nubes">
+		<img src="img/nube1.png" alt="" class="nube nube1">
+		<img src="img/nube2.png" alt="" class="nube nube2">
+		<img src="img/nube3.png" alt="" class="nube nube3">
+		<img src="img/nube4.png" alt="" class="nube nube4">
+	</div>
 		
 		<section>
-			<div class="nubes">
-					<img src="img/nube1.png" alt="" class="nube nube1">
-					<img src="img/nube2.png" alt="" class="nube nube2">
-					<img src="img/nube3.png" alt="" class="nube nube3">
-					<img src="img/nube4.png" alt="" class="nube nube4">
-				</div>
+			<button class="volverNosotros"><a href="index.html">Volver</a></button>
 			<article class="tituloNosotros">
 				<h1>Nosotros</h1>
 			</article>
