Se agrego el logo de la liga de ciclismo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 				<img  src="img/localizador.png"  class="indicador ind5" href="" alt="">
 				<img  src="img/localizador.png"  class="indicador ind6" href="" alt="">
 		</div>
-		<div class="logo"><img  src="img/logo.png" alt=""></div>
+		<div class="logo">
+			<img src="img/logo.png" alt="">
+			<img src="img/logoliga.png" alt="" class="liga">
+		</div>
 		<a href="#sec1" class="flecha"><img  src="img/flecha.png" href="#sec1" alt=""></a>
 	</div>
 		<nav class="menu1">
